whoami/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  externalTrafficPolicy: Local
  selector:
    app: whoami
  type: ClusterIP
  ports:
    - name: http-whoami
      protocol: TCP
      port: 80
      targetPort: 80
